# VGServer

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  ayncdemo1  deployment.yaml  istio-policies.yaml  mockaync  mode.md  workflow.md
AuthorVGroup/: go.mod  go.sum  main.go  users.sql
AuthorVGroup/hiredis/: main.go
AuthorVGroup/models/: main.go  model.go
AuthorVGroup/router/: apple.go  gmail.go  iphone.go  main.go
envoy/: Dockerfile  envoy.yaml
src/: main.cpp
src/abs/: Result.hpp  fm_database.hpp  fm_resultset.hpp
src/controller/: aes.cpp  aes.hpp  chat_ws_controller.cpp  chat_ws_controller.hpp  controller.hpp  google_auth.cpp  hello.cpp  hello.hpp  hello_controller.cpp  jwt_token.cpp  jwt_token.hpp  login_controller.cpp  pub.hpp  router.hpp
src/crypto/: CryptoUtils.hpp
src/database/: db_pool.cpp  db_pool.hpp
src/gin/: UWSWrapper.hpp  async_io_tool.hpp  uWSGuard.hpp
src/jwt-cpp/: jwt.h  jwt_auth.hpp
src/model/: model.hpp
src/utils/: log.hpp
src/vg_tests/: MockFMResultSet.h  concurrentqueue.cpp  test_crypto.cpp  test_dbpoll.cpp  test_fm.cpp  test_jwt.cpp  test_result.cpp
